fix(ai): rm grouped suggestions nowrap

--- a/packs/ai/app/components/folio/ai/console/text_suggestions_component.sass
+++ b/packs/ai/app/components/folio/ai/console/text_suggestions_component.sass
@@ -178,8 +178,3 @@ $f-ai-c-text-suggestions-inner-gap: px-to-rem(12px)
 
   &--grouped &__suggestion
     min-height: px-to-rem(44px)
-
-  &--grouped &__suggestion-text
-    overflow: hidden
-    text-overflow: ellipsis
-    white-space: nowrap
